--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
             <a href="pruebajs.html">Primer ejercicios Variables <br></a>
         </il>
         <il>
+            <a href="fundamentos.html">Fundamentos de html y css<br></a>
+            <il>
+                <a href="Examen.html">Examen fundamentos</a>
+            </il>
+        </il>
+        <il>
             <a href="Examen.html">Examen js</a>
         </il>
     </ul>
