--- a/maquetado.html
+++ b/maquetado.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>{
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabla Comparativa de Eventos en JavaScript</title>
-</head>}
+    <link rel="stylesheet" href="estilomaquetado.css">
+</head>
 <body>
 
     <h1>Tabla Comparativa de Eventos en JavaScript</h1>
