--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
             <a href="pruebajs.html">Primer ejercicios Variables <br></a>
         </il>
         <il>
-            <a href="fundamentos.html">Fundamentos de html y css<br></a>
-            <il>
-                <a href="Examen.html">Examen fundamentos</a>
-            </il>
+            <a href="fundamentos.html">Fundamentos de html y css<br></a>       
         </il>
+        <il>
+                <a href="Examen.html">Examen fundamentos</a>
+         </il>       
         <il>
             <a href="Examen.html">Examen js</a>
         </il>
+    </il>
+    <a href="tabla.html">Enmaquetado</a>
     </ul>
 </body>
 </html>
